# opencart_auto_tests

./: README.md  config.py  pyproject.toml
core/: __init__.py  base_test.py  locators.py  logger.py  scripts.py  utils.py  web_driver.py
core/page/: __init__.py  base_page.py  page_auth.py
core/page/mixins/: __init__.py  clicker.py  dropdown_handler.py  element_finder.py  field_filler.py  script_executor.py  text_handler.py  сhecks.py
locators/: __init__.py  base_locators.py  brand_locators.py  iphone_locators.py  product_locators.py  products_locators.py  registration_locators.py
page/: __init__.py  page_brands.py  page_cameras.py  page_iphone.py  page_main.py  page_product.py  page_products.py  page_registration.py  page_show_all.py  routers.py
tests/: config_test.py  test_brands.py  test_cameras.py  test_four.py  test_iphone.py  test_one.py  test_register.py  test_show_all.py  test_three.py  test_two.py  test_zero.py
utils/: decorators.py  random_user.py
